--- a/index.html
+++ b/index.html
@@ -40,29 +40,7 @@
             <h2 data-aos="fade-right" class="titulo">Comidas</h2>
         </a>
         <div data-aos="flip-up zoom-out" class="carta ">
-            <h3 class="nombre">Para Comer</h3>
-            <div class="caja">
-                <p class="plato">(Plato)</p>
-                <span class="precio">$000</span>
-                <span class="descripcion">(Descripción)</span>
-                <p></p>
-                <p class="plato">(Plato)</p>
-                <span class="precio">$000</span>
-                <span class="descripcion">(Descripción)</span>
-                <p></p>
-                <p class="plato">(Plato)</p>
-                <span class="precio">$000</span>
-                <span class="descripcion">(Descripción)</span>
-                <p></p>
-            </div>
-            <h3 class="nombre">Parrilla</h3>
-            <div data-aos="flip-up" class="caja">
-                <p class="plato">(Plato)</p>
-                <span class="precio">$000</span>
-                <span class="descripcion">(Descripción)</span>
-                <p></p>
-            </div>
-            <h3 class="nombre">Pizzas</h3>
+            <h3 data-aos="zoom-in" class="nombre">Para Comer</h3>
             <div data-aos="flip-up" class="caja">
                 <p class="plato">(Plato)</p>
                 <span class="precio">$000</span>
@@ -72,15 +50,37 @@
                 <span class="precio">$000</span>
                 <span class="descripcion">(Descripción)</span>
                 <p></p>
+                <p class="plato">(Plato)</p>
+                <span class="precio">$000</span>
+                <span class="descripcion">(Descripción)</span>
+                <p></p>
             </div>
-            <h3 class="nombre">Postres</h3>
+            <h3 data-aos="zoom-in" class="nombre">Parrilla</h3>
             <div data-aos="flip-up" class="caja">
                 <p class="plato">(Plato)</p>
                 <span class="precio">$000</span>
                 <span class="descripcion">(Descripción)</span>
                 <p></p>
             </div>
-            <h3 class="nombre">Desayuno</h3>
+            <h3 data-aos="zoom-in" class="nombre">Pizzas</h3>
+            <div data-aos="flip-up" class="caja">
+                <p class="plato">(Plato)</p>
+                <span class="precio">$000</span>
+                <span class="descripcion">(Descripción)</span>
+                <p></p>
+                <p class="plato">(Plato)</p>
+                <span class="precio">$000</span>
+                <span class="descripcion">(Descripción)</span>
+                <p></p>
+            </div>
+            <h3 data-aos="zoom-in" class="nombre">Postres</h3>
+            <div data-aos="flip-up" class="caja">
+                <p class="plato">(Plato)</p>
+                <span class="precio">$000</span>
+                <span class="descripcion">(Descripción)</span>
+                <p></p>
+            </div>
+            <h3 data-aos="zoom-in" class="nombre">Desayuno</h3>
             <div data-aos="flip-up" class="caja">
                 <p class="plato">(Plato)</p>
                 <span class="precio">$000</span>
@@ -94,13 +94,13 @@
             <h2 data-aos="fade-right" class="tituloB">Bebidas</h2>
         </a>
         <div class="carta">
-            <h2 class="nombreB">Para beber</h2>
+            <h2 data-aos="zoom-in" class="nombreB">Para beber</h2>
             <div data-aos="flip-left" class="caja">
                 <p class="bebida">(Bebida)</p>
                 <span class="precioB">$000</span>
                 <span class="descripcionB">(Descripción)</span>
             </div>
-            <h2 class="nombreB">Alcoholes</h2>
+            <h2 data-aos="zoom-in" class="nombreB">Alcoholes</h2>
             <div data-aos="flip-left" class="caja">
                 <p class="bebida">(Bebida)</p>
                 <span class="precioB">$000</span>
