--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>QR Menu/Carta</title>
     <link rel="stylesheet" href="style.css">
 
+    <!--Fontawesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 
     <!--GOOGLE FONT-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,8 +21,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Damion&display=swap" rel="stylesheet">
 
-    <!--Animate CSS-->
-
+    <!--AOS-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
@@ -121,6 +122,17 @@
             </div>
         </div>
     </div>
+    <footer class="pie">
+        <div class="redes">
+            <h6>REDES SOCIALES</h6>
+            <a href=""><i class="fab fa-instagram fa-2x fa-lg"></i></a>
+        </div>
+        <div class="contacto">
+            <h6>CONTACTO</h6>
+            <p>Mail: <span>menuqruy@gmail.com</span></p>
+            <p>Tel: <span>098595800 / 099063861</span></p>
+        </div>
+    </footer>
 
     <!--Javascript-->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
