--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="style.css">
 
     <!--Fontawesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
 
     <!--GOOGLE FONT-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -26,13 +28,44 @@
 </head>
 
 <body>
+    <h1 class="mqr">¿Queres tener tu menu de forma web?</h1>
+    <h3 class="mqr__sub">Con menuqruy tenemos el mejor plan para lo lograrlo</h3>
+
+    <p class="prop">Debido a la situacion sanitaria actual, y al interes de los clientes a seguir saliendo pero
+        cumpliendo las nuevas normas sanitarias,
+        creemos que es importante la rapida adopcion de nuevos sistemas que permitan generar seguridad en el cliente.
+        Una forma accesible de aplicar es el menu sinn contacto (Menú QR), el cual se accede por medio de un codigo QR
+        ques es escaneado desde cualquoier celular android o iOS.
+    </p>
+
+    <h3>¿Que ofrecemos?</h3>
+
+    <ul class="ofer">
+        <li class="lista">Generacion de codigo QR</li>
+        <li class="lista">3 meses gratis de hosting, mantenimiento y modificaciones. <span>*modificaciones parciales en el menú
+                (precios, platos). no aplica a modificaciones que alteren la totalidad esttetica del menú</span>
+        </li>
+        <li class="lista">10 stickers del codigo QR para ser colocados en mesas (chicos, lavables)</li>
+        <li class="lista">Desarrollo web del menú/carta que ya tienen, respetando el branding del local</li>
+        <li class="lista">Asesoramiento total en cualquier tipo de idea que presente el cliente y que sea viable de adoptar</li>
+        <li class="lista"></li>
+    </ul>
+
+    <h3>¿Que necesitamos?</h3>
+
+    <ul class="ofer">
+        <li class="lista">Menú actual del local</li>
+        <li class="lista">Acceso a los recursos esteticos del menú (fuentes, logos, etc)</li>
+    </ul>
+
+    <h3>Ejemplo de Menú web</h3>
     <header>
         <h1 data-aos="zoom-in-down">QR Menú</h1>
     </header>
     <nav>
-        <ul>
-            <li data-aos="zoom-in"><a href="#menu">Comidas</a></li>
-            <li data-aos="zoom-in"><a href="#bebidas">Bebidas</a></li>
+        <ul class="nav">
+            <li class="nav__bar" data-aos="zoom-in"><a href="#menu">Comidas</a></li>
+            <li class="nav__bar" data-aos="zoom-in"><a href="#bebidas">Bebidas</a></li>
 
         </ul>
     </nav>
@@ -47,14 +80,6 @@
                 <span class="precio">$000</span>
                 <span class="descripcion">(Descripción)</span>
                 <p></p>
-                <p class="plato">(Plato)</p>
-                <span class="precio">$000</span>
-                <span class="descripcion">(Descripción)</span>
-                <p></p>
-                <p class="plato">(Plato)</p>
-                <span class="precio">$000</span>
-                <span class="descripcion">(Descripción)</span>
-                <p></p>
             </div>
             <h3 data-aos="zoom-in" class="nombre">Parrilla</h3>
             <div data-aos="flip-up" class="caja">
@@ -65,10 +90,6 @@
             </div>
             <h3 data-aos="zoom-in" class="nombre">Pizzas</h3>
             <div data-aos="flip-up" class="caja">
-                <p class="plato">(Plato)</p>
-                <span class="precio">$000</span>
-                <span class="descripcion">(Descripción)</span>
-                <p></p>
                 <p class="plato">(Plato)</p>
                 <span class="precio">$000</span>
                 <span class="descripcion">(Descripción)</span>
@@ -111,20 +132,12 @@
                 <span class="precioB">$000</span>
                 <span class="descripcionB">(Descripción)</span>
                 <p></p>
-                <p class="bebida">(Bebida)</p>
-                <span class="precioB">$000</span>
-                <span class="descripcionB">(Descripción)</span>
-                <p></p>
-                <p class="bebida">(Bebida)</p>
-                <span class="precioB">$000</span>
-                <span class="descripcionB">(Descripción)</span>
-                <p></p>
             </div>
         </div>
     </div>
     <footer class="pie">
         <div class="redes">
-            <h6>REDES SOCIALES</h6>
+            <h6>SEGUINOS</h6>
             <a href=""><i class="fab fa-instagram fa-2x fa-lg"></i></a>
         </div>
         <div class="contacto">
