--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+    <div class="contenedor0">
     <h1 class="mqr">¿Queres tener tu menu de forma web?</h1>
     <h3 class="mqr__sub">Con menuqruy tenemos el mejor plan para lo lograrlo</h3>
 
@@ -42,7 +43,7 @@
 
     <ul class="ofer">
         <li class="lista">Generacion de codigo QR</li>
-        <li class="lista">3 meses gratis de hosting, mantenimiento y modificaciones. <span>*modificaciones parciales en el menú
+        <li class="lista">3 meses gratis de hosting, mantenimiento y modificaciones. <br><span>*modificaciones parciales en el menú
                 (precios, platos). no aplica a modificaciones que alteren la totalidad esttetica del menú</span>
         </li>
         <li class="lista">10 stickers del codigo QR para ser colocados en mesas (chicos, lavables)</li>
@@ -59,6 +60,8 @@
     </ul>
 
     <h3>Ejemplo de Menú web</h3>
+
+    </div>
     <header>
         <h1 data-aos="zoom-in-down">QR Menú</h1>
     </header>
