--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <li class="lista">Acceso a los recursos esteticos del menú (fuentes, logos, etc)</li>
     </ul>
 
-    <h3>Ejemplo de Menú web</h3>
+    <h3 class="ej">Ejemplo de menú web</h3>
 
     </div>
     <header>
