--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Menu/Carta</title>
+    <title>QR Menú/Carta</title>
     <link rel="stylesheet" href="style.css">
 
     <!--Fontawesome-->
@@ -29,27 +29,24 @@
 
 <body>
     <div class="contenedor0">
-    <h1 class="mqr">¿Queres tener tu menu de forma web?</h1>
-    <h3 class="mqr__sub">Con menuqruy tenemos el mejor plan para lo lograrlo</h3>
+    <h1 class="mqr">¿Querés tener tu menú de forma web?</h1>
+    <h3 class="mqr__sub">Con menuqruy tenemos el mejor plan para lograrlo</h3>
 
-    <p class="prop">Debido a la situacion sanitaria actual, y al interes de los clientes a seguir saliendo pero
-        cumpliendo las nuevas normas sanitarias,
-        creemos que es importante la rapida adopcion de nuevos sistemas que permitan generar seguridad en el cliente.
-        Una forma accesible de aplicar es el menu sinn contacto (Menú QR), el cual se accede por medio de un codigo QR
-        ques es escaneado desde cualquoier celular android o iOS.
+    <p class="prop">Debido a la situación sanitaria actual, y al interés de los clientes a seguir saliendo pero cumpliendo las nuevas normas,
+        creemos importante la rapida adopcion de nuevos sistemas que permitan generar seguridad en el cliente.
+        Una forma accesible de aplicar es el menú sin contacto (Menú QR), el cual se accede por medio de un código QR el cual se escanea
+        desde cualquier celular Android o iOS.
     </p>
 
     <h3>¿Que ofrecemos?</h3>
 
     <ul class="ofer">
-        <li class="lista">Generacion de codigo QR</li>
-        <li class="lista">3 meses gratis de hosting, mantenimiento y modificaciones. <br><span>*modificaciones parciales en el menú
-                (precios, platos). no aplica a modificaciones que alteren la totalidad esttetica del menú</span>
-        </li>
-        <li class="lista">10 stickers del codigo QR para ser colocados en mesas (chicos, lavables)</li>
+        <li class="lista">Generación de código QR</li>
+        <li class="lista">3 meses gratis de hosting, mantenimiento y modificaciones. <br>
+            <span>*Modificaciones parciales en el menú (precios, platos), no aplica a modificaciones que alteren la totalidad estetica del menú</span></li>
+        <li class="lista">10 stickers del código QR para ser colocados en mesas (chicos, lavables)</li>
         <li class="lista">Desarrollo web del menú/carta que ya tienen, respetando el branding del local</li>
         <li class="lista">Asesoramiento total en cualquier tipo de idea que presente el cliente y que sea viable de adoptar</li>
-        <li class="lista"></li>
     </ul>
 
     <h3>¿Que necesitamos?</h3>
