--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
 <body>
     <div class="contenedor0">
-    <h1 class="mqr">¿Querés tener tu menú de forma web?</h1>
+    <h1 class="mqr">¿Querés tu menú de forma web?</h1>
     <h3 class="mqr__sub">Con menuqruy tenemos el mejor plan para lograrlo</h3>
 
     <p class="prop">Debido a la situación sanitaria actual, y al interés de los clientes a seguir saliendo pero cumpliendo las nuevas normas,
-        creemos importante la rapida adopcion de nuevos sistemas que permitan generar seguridad en el cliente.
-        Una forma accesible de aplicar es el menú sin contacto (Menú QR), el cual se accede por medio de un código QR el cual se escanea
+        creemos importante la rapida adopcion de nuevos sistemas que permitan generar seguridad en el cliente,
+        como el menú sin contacto (Menú QR), el cual se accede por medio de un código QR el cual se escanea
         desde cualquier celular Android o iOS.
     </p>
 
