--- a/index.html
+++ b/index.html
@@ -73,41 +73,26 @@
         <a name="menu" href="">
             <h2 data-aos="fade-right" class="titulo">Comidas</h2>
         </a>
-        <div data-aos="flip-up zoom-out" class="carta ">
+        <div data-aos="flip-up zoom-out" class="carta">
             <h3 data-aos="zoom-in" class="nombre">Para Comer</h3>
             <div data-aos="flip-up" class="caja">
-                <p class="plato">(Plato)</p>
-                <span class="precio">$000</span>
-                <span class="descripcion">(Descripción)</span>
-                <p></p>
+
             </div>
             <h3 data-aos="zoom-in" class="nombre">Parrilla</h3>
             <div data-aos="flip-up" class="caja">
-                <p class="plato">(Plato)</p>
-                <span class="precio">$000</span>
-                <span class="descripcion">(Descripción)</span>
-                <p></p>
+
             </div>
             <h3 data-aos="zoom-in" class="nombre">Pizzas</h3>
             <div data-aos="flip-up" class="caja">
-                <p class="plato">(Plato)</p>
-                <span class="precio">$000</span>
-                <span class="descripcion">(Descripción)</span>
-                <p></p>
+
             </div>
             <h3 data-aos="zoom-in" class="nombre">Postres</h3>
             <div data-aos="flip-up" class="caja">
-                <p class="plato">(Plato)</p>
-                <span class="precio">$000</span>
-                <span class="descripcion">(Descripción)</span>
-                <p></p>
+
             </div>
             <h3 data-aos="zoom-in" class="nombre">Desayuno</h3>
             <div data-aos="flip-up" class="caja">
-                <p class="plato">(Plato)</p>
-                <span class="precio">$000</span>
-                <span class="descripcion">(Descripción)</span>
-                <p></p>
+
             </div>
         </div>
     </div>
@@ -118,9 +103,7 @@
         <div class="carta">
             <h2 data-aos="zoom-in" class="nombreB">Para beber</h2>
             <div data-aos="flip-left" class="caja">
-                <p class="bebida">(Bebida)</p>
-                <span class="precioB">$000</span>
-                <span class="descripcionB">(Descripción)</span>
+
             </div>
             <h2 data-aos="zoom-in" class="nombreB">Alcoholes</h2>
             <div data-aos="flip-left" class="caja">
@@ -136,21 +119,28 @@
         </div>
     </div>
     <footer class="pie">
-        <div class="redes">
-            <h6>SEGUINOS</h6>
-            <a href=""><i class="fab fa-instagram fa-2x fa-lg"></i></a>
-        </div>
         <div class="contacto">
             <h6>CONTACTO</h6>
             <p>Mail: <span>menuqruy@gmail.com</span></p>
             <p>Tel: <span>098595800 / 099063861</span></p>
         </div>
+        <div class="redes">
+            <h6>SEGUINOS</h6>
+            <a href=""><i class="fab fa-instagram fa-2x fa-lg"></i></a>
+        </div>
+
     </footer>
 
     <!--Javascript-->
+    <script src="jquery-3.6.0.min.js"></script>
+    
+    <script src="app.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
+        AOS.init({
+            duration: 1200,
+        });
     </script>
 </body>
 
